increase header content height from 380px to 390px, wrap content of Weather component in div with id of weather-container and use that to control width of weather panel, weather-container also fixes centering of spinner

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -11,7 +11,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  height: 380px;
+  height: 390px;
   width: var(--content-width);
   max-width: var(--max-content-width);
   margin: var(--margin-width) auto;
