--- a/src/components/weather/Weather.css
+++ b/src/components/weather/Weather.css
@@ -1,4 +1,11 @@
+#weather-container {
+  width: 450px;
+  height: 100%;
+}
+
 #weather-panel {
+  height: 100%;
+  width: 100%;
   box-sizing: border-box;
   border-radius: 15px;
   border: 2px solid var(--darker-green);
@@ -6,25 +13,23 @@
   padding: 0 15px;
   display: grid;
   grid-template-rows: repeat(3, 1fr);
-  height: 100%;
-  width: 450px;
   user-select: none;
 }
 
 @media (max-width: 1200px) {
-  #weather-panel {
+  #weather-container {
     width: 400px;
   }
 }
 
 @media (max-width: 1020px) {
-  #weather-panel {
+  #weather-container {
     width: 380px;
   }
 }
 
 @media (max-width: 900px) {
-  #weather-panel {
+  #weather-container {
     width: calc(100vw - (2 * var(--margin-width)));
   }
 }
@@ -45,19 +50,19 @@
 }
 
 @media (max-width: 500px) {
-  #weather-panel {
+  #weather-container {
     height: 280px;
   }
 }
 
 @media (max-width: 430px) {
-  #weather-panel {
+  #weather-container {
     height: 250px;
   }
 }
 
 @media (max-width: 300px) {
-  #weather-panel {
+  #weather-container {
     width: 270px;
   }
 }
